    compound modules
  - callInitialize() and callFinish() are also in cModule; they are defined
    in compound modules to recursively call themselves for submodules.
    callInitialize() for the compound module is called _before_, callFinish()
    is called _after_ the call on submodules.
------ omnetpp-2.0b released ------
Sept 20, 1999
  - bug fixed in cWeightedStdDev::collect2(): cStdDev::collect() was called
    with val instead of weight*val.
  - bug fixed with misplaced ev.messageDelivered() calls in the receiveNewOn()
    function
  - cOutVector::record() corrected: it should update the inspector even
    if it doesn't write to file
Sept 23, 1999
  - callInitialize() and scheduleStart() swapped in cSimulation's startRun()
    to support send()/scheduleAt() in initialize() to modules with activity().
  - same change made to createInitStart(), and it was renamed to
    createScheduleInit() to reflect the new order of what it does.
Oct 6, 1999
  - isSelfMessage() member function added to cMessage. It tells if the message
    was sent (using a send..() function) or posted by a scheduleAt() call.
  - a new void* pointer was added to cMessage. The pointer is set/returned by
    the setContextPointer(void *p) and contextPointer() functions, and it can
    be used for any purpose by the simulation programmer. It is not used by the
    simulation kernel, and it is treated as a mere pointer (no memory mgmt is
    done on it). Intended purpose: a module which schedules several
    self-messages (timers) will need to identify a self-message when it arrives
    back to the module, ie. the module will have to determine which timer
    went off and what to do then. The context pointer can be made to point
    at a data structure kept by the module which can carry enough "context"
    information about the event.
Remaining -Wall warnings: "%lf", "%lg", "%le" in printf format strings.
------ omnetpp-2.0b2 released ------