@@ -63,6 +63,10 @@ typedef int bool;
 #define ASSERT(expr)  ((void)0)
 #endif
 
+//=== this macro is used to cast away the constness of string literals
+//    until (in the near future) the whole source is made const-correct
+#define CONST_HACK    char *
+
 //=== model time
 typedef double       simtime_t;
 #define MAXTIME      HUGE_VAL
